# csp-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
csp_tool/: csp_analyser.py  csp_extractor.py  csp_object.py  csp_parser.py
tests/: test_csp_analyser.py  test_csp_extract.py  test_csp_parse.py  test_setup.py
