[tool.poetry]
name = "csp_tool"
version = "0.2.0"
description = "Tools for review of Content Security Policies (python 3.8 compatible)"
license = "Apache-2.0"
repository = "https://github.com/hmrc/csp-tool"
authors = ["tess-barnes-mt <tess.barnes@digital.hmrc.gov.uk>"]
maintainers = ["tess-barnes-mt <tess.barnes@madetech.com>",
"Tess Barnes <tess@tessbarnes.uk>",
"Jez Daniels <jez.daniels@digital.hmrc.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
